--- a/restaurants/templates/create.html
+++ b/restaurants/templates/create.html
@@ -5,6 +5,10 @@
         <title>Create</title>
     </head>
     <body>
-        
+      <form action"{% url 'restaurant-create' %}" method="POST">
+      	{% csrf_token %}
+      	{{form}}
+      	<button>Submit</button>
+      </form>  
     </body>
 </html>
